--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family:Montserrat;
+    font-family:"Montserrat",Extra-Light;
 	background: #f2f2f2;
 }
 ul,li,a{
@@ -15,13 +15,15 @@ a,div,p,ul,li,i,img,input,button,label,h2,h3,textarea{
 body{
     width: 100%;
     height: 100%;
-    
+    width: 100rem;
+	margin: 0 auto;
+	color: #141414;
 }
 .container{
-    
+	margin: 0 auto;
 }
 section{
-	padding: 4rem 10.5rem;
+	padding: 5rem 13.125rem;
 	overflow: hidden;
 	background: #fff;
 	border-bottom: 2px solid #eee;
@@ -59,20 +61,19 @@ button{
 	padding-top: 10rem;
 }
 .headtext{
-    width: 48.5rem;
-    height: 12.375rem;
+    width: 60.625rem;
+    /* height: 12.375rem; */
 	text-align: center;
 	margin: 0 auto;
 	color: white;
 }
 .title{
-	font-size: 3rem;
-	opacity: 0.8;
+	font-size: 3.75rem;
 }
 .subtitle{
-	width: 38.5rem;
+	width: 48.125rem;
 	margin: 0 auto;
-	font-size: 1rem;
+	font-size: 1.25rem;
 	opacity: 0.7;
 }
 .headtext>.subtitle{
@@ -81,8 +82,8 @@ button{
 .headbox{
 	border: 1px solid rgba(230,230,230,0.5);
 	box-sizing: border-box;
-	margin-top: 5rem;
-	padding: 2.25rem 5rem;
+	margin-top: 6.25rem;
+	padding: 3.125rem 6.25rem;
 	line-height: 1.5rem;
 }
 .headbox .title{
@@ -93,6 +94,7 @@ button{
 .headbox .subtitle{
 	font-size: 0.75rem;
 	opacity: 0.3;
+	font-family: ;
 }
 .headinput{
 	margin-top: 1.5rem;
@@ -102,7 +104,6 @@ button{
 }
 input{
 	color: #fff;
-	width: 15rem;
 	/* height: 2.5rem;
 	line-height: 2.5rem; */
 	padding: 1.125rem;
@@ -112,26 +113,31 @@ input{
 	box-sizing: border-box;
 	background: rgba(0,0,0,0);
 	padding-left: 1rem;
+	border-radius: 2px;
 }
-
+.headinput input{
+	width: 18.125rem;
+}
 .headinput button{
-	padding: 1.125rem;
+	padding: 1.125rem 2.25rem;
 }
 .feature9 {
 	text-align: center;
 	color: #141414;
 }
 .feature9 .title{
-	font-size: 14px;
+	font-size: 0.875rem;
 	font-weight: bold;
 }
 .feature9 .subtitle{
-	margin-top: 2rem;
-	font-size: 2rem;
+	margin-top: 2.25rem;
+	font-size: 2.625rem;
 }
 .content{
-	padding: 3.5rem;
+	/* padding: 3.5rem; */
 	text-align: left;
+	width: 60.625rem;
+	margin: 0 auto;
 }
 .flex{
 	display: flex;
@@ -175,6 +181,7 @@ input{
 }
 .callaction .left{
 	align-self: center;
+	margin-left: 6.25rem;
 }
 .callaction .title{
 	font-size: 2.5rem;
@@ -207,11 +214,14 @@ input{
 	font-size: 2rem;
 }
 .feature19 .subtitle{
-	width: 15rem;
+	margin-top: 2.25rem;
+	font-size: 1rem;
+	width: 18.75rem;
 }
 .feature19 .list{
 	flex-direction: column;
 	text-align: center;
+	margin-top: 5.625rem;
 }
 .feature19 .list img{
 	width: 8.125rem;
@@ -222,7 +232,6 @@ input{
 	
 	align-items: center;
 	justify-content: space-between;
-	margin: 0 5rem;
 	margin-top: 3.5rem;
 }
 .feature14 .list{
@@ -240,9 +249,8 @@ input{
 	width: 18.75rem;
 }
 .feature14 img{
-	width: 28.5rem;
+	width: 35.625rem;
 }
-
 .team4 .content>.flex{
 	flex-direction: column;
 	flex-wrap: wrap;
@@ -252,7 +260,7 @@ input{
 	justify-content: space-between;
 }
 .team4 .list {
-	margin-top: 1.25rem;
+	margin-top: 1.875rem;
 	position:relative;
 	overflow: hidden;
 }
@@ -261,8 +269,8 @@ input{
 	transform: translateY(0);
 }
 .team4 .photo{
-	width: 27.5rem;
-	height: 19rem;
+	width: 29.375rem;
+	height: 21.25rem;
 	display: block;
 	overflow: hidden;
 }
@@ -305,7 +313,7 @@ input{
 .team4 .desc{
 	font-size: 0.75rem;
 	margin-top: 1rem;
-	opacity: 0.7;
+	opacity: 0.4;
 }
 .team4 .iconfont{
 	border: 1px solid rgba(230,230,230,0.5);
@@ -316,10 +324,16 @@ input{
 	color: #fff;
 }
 .form{
+	width: 29.375rem;
 	border: 1px solid #eee;
-	padding: 3rem;
+	padding: 2.5rem 3.125rem;
 	border-radius: 0.625rem;
-	margin-right: 3.125rem;
+	margin-right: 8.125rem;
+	flex: 1;
+}
+.form h3{
+	text-align: center;
+	margin-bottom: 2.5rem;
 }
 .form input{
 	width: 100%;
@@ -347,6 +361,9 @@ input{
 }
 .form button:hover{
 	background-color: orange;
+}
+.contact{
+	flex: 1;
 }
 .contact .subtitle{
 	width: 100%;
@@ -383,6 +400,9 @@ footer  a{
 footer .row li{
 	margin-top: 1.75rem;
 }
+.footer{
+	width: 73.125rem;
+}
 .last{
 	width: 16.875rem;
 	height: 10rem;
@@ -395,15 +415,20 @@ footer .last .frist{
 	margin-bottom: 1.25rem;
 }
 footer .last .desc{
-	
+	font-size: 1.125rem;
+	line-height: 1.875rem;
 	margin-bottom: 1.5rem;
 }
 footer .row p,footer .row .flex{
 	color: #fff;
 	opacity: 0.7;
 }
+footer .row .flex{
+	justify-content: flex-start;
+}
 footer .row .flex .iconfont{
-	font-size: 1.5rem;
+	font-size: 1.25rem;
+	margin-right: 1.5625rem;
 }
 .icon:hover > .iconfont{
 	color: #FFA500;
